Fix a link error in unofficial GCC 4.4 builds on Linux. https://bugs.webkit.org/show_bug.cgi?id=31477

Reviewed by Dimitri Glazkov.

* bindings/v8/V8Binding.cpp:  Add explicit instantiations of v8StringToWebCoreString template.



Canonical link: https://commits.webkit.org/42396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50967 268f45cc-cd09-0410-ab3c-d52691b4dbfc